# woodshed

./: .gitignore  CHANGELOG.md  CLDEBUG.txt  README.md  analyze_repo_history.sh  bashx.txt  changelog_debugger.sh  debug_output.txt  generate_changelog.sh  generate_tag_changelog.sh  update_changelog.sh  validate_commits.sh
03-coursework/dlai/multi-ai-agent-systems-with-crewai/stock_analysis/: pyproject.toml
04-projects/aiforge/: .flake8  .gitignore  .markdownlint.yaml  CHANGELOG.md  DEVELOPMENT.md  README.md  pyproject.toml  tasks.py
04-projects/aiforge/data/: model_evaluation_output.json  test_persistent.txt
04-projects/aiforge/docs/: executive_summary.md  project_plan.md
04-projects/aiforge/docs/diagrams/: project_structure.mmd
04-projects/aiforge/docs/insights/: pytest-standardized-fiie-access.md
04-projects/aiforge/docs/instructions/: risk_kit.md
04-projects/aiforge/logs/: README.md
04-projects/aiforge/notebooks/: hypothesis.ipynb  langchain-chunker.ipynb
04-projects/aiforge/scripts/: changelog_generator.sh  run_changelog.py  run_pre_commit.py
04-projects/aiforge/src/aiforge/: config.py
04-projects/aiforge/src/example_kit/: __init__.py
04-projects/aiforge/src/risk_kit/: README.md  calculator.py  cli.py  config.py  utils.py
04-projects/aiforge/tests/: test_integration_server.py
04-projects/aiforge/tmp/: asana.json  file1.txt  file2.txt  user_data.json
04-projects/aiforge/tmp/articles/: 05-03-ai-powered-supply-chain-startup-pando-lands-30m-investment.txt  05-03-ai-replace-tv-writers-strike.txt  05-03-databricks-acquires-ai-centric-data-governance-platform-okera.txt  05-03-nova-is-building-guardrails-for-generative-ai-content-to-protect-brand-integrity.txt  05-03-spawning-lays-out-its-plans-for-letting-creators-opt-out-of-generative-ai-training.txt  05-04-slack-updates-aim-to-put-ai-at-the-center-of-the-user-experience.txt  05-05-google-and-openai-are-walmarts-besieged-by-fruit-stands.txt  05-05-google-i-o-2023-is-next-week-heres-what-were-expecting.txt  05-05-vint-cerf-on-the-exhilarating-mix-of-thrill-and-hazard-at-the-frontiers-of-tech.txt  05-06-ai-startups-q1-investments.txt  05-06-this-week-in-apps-apple-and-google-team-up-on-trackers-google-i-o-preview-apps-hit-newfronts.txt
04-projects/aiforge/tmp/chromadb/: chroma.sqlite3
04-projects/aiforge/tmp/chromadb-populate/: chroma.sqlite3
04-projects/fintech/risk_calculator/: README.md  pyproject.toml
04-projects/fintech/risk_calculator/risk_calculator/: cli.py
04-projects/fintech/risk_calculator/tests/: test_cli.py
04-projects/fintech/trading_kit/: .flake8  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tasks.py
04-projects/fintech/trading_kit/docs/: overview.md
04-projects/fintech/trading_kit/docs_api/: search.js  src.html
04-projects/fintech/trading_kit/tests/: test_exceptions.py
04-projects/fintech/trading_kit_fastapi/: .cursorrules  CHANGELOG.md  README.md  changelog_generator.sh  pyproject.toml  pytest.ini  start_server.py
04-projects/fintech/trading_kit_fastapi/tests/: test_about.py  test_analyze_trends.py  test_call_fails.py  test_health.py  test_main.py  test_models.py
04-projects/prism/: .flake8  .gitignore  CHANGELOG.md  README.md  pyproject.toml  tasks.py
04-projects/prism/docs/dev/: architecture.md  layout.md  milestone-00.md  milestone-02-collectors.md  milestone-03-analysis.md
04-projects/prism/notebooks/: README.md  perplexity.ipynb  yfinance.ipynb
04-projects/prism/reports/: Apple_perplexity_report.txt  Cotswold_1st_Prompt.txt  Cotswold_2nd_Prompt.txt  Provide as much information as possible about Cotswold Industries_perplexity_report.txt
04-projects/prism/research_kit/: analysis.py  company.py  pipeline.py  reporting.py
04-projects/prism/research_kit/collector/: __init__.py  collector.py  collector_newsapi.py  collector_perplexity.py  collector_yfinance.py
04-projects/prism/research_kit/utils/: __init__.py  error_handling.py  logging.py
04-projects/prism/tests/analysis/: test_analysis.py
04-projects/prism/tests/collector/: test_collector.py  test_perplexity_integration.py  test_yfinance.py
04-projects/prism/tests/company/: test_company.py
04-projects/prism/tests/pipeline/: test_pipeline.py
04-projects/prism/tests/reports/: test_reporting.py  test_reporting_perplexity.py
04-projects/questions/: .gitignore  README.md  pyproject.toml  pytest.ini  tasks.py
04-projects/questions/questions/: animation_utils.py  file_utils.py  main.py  prompts.py
04-projects/questions/results/: questions_20241028_131626.json  questions_20241028_131626.md  questions_20241030_153144.json  questions_20241030_153144.md  questions_20241030_153334.json  questions_20241030_153334.md  questions_20241030_232322.json  questions_20241030_232322.md  questions_20241031_063530.json  questions_20241031_063530.md  questions_20241031_085208.json  questions_20241031_085208.md
04-projects/questions/tests/: test_file_utils.py  test_main.py
04-projects/recipe-assistant/assistant-py/: .flake8  README.md  pyproject.toml  run_checks.py
04-projects/rss-ai/: .flake8  .gitignore  .markdownlint.json  .mdformat.yaml  CHANGELOG.md  README.md  pyproject.toml  run_workflow.py  tasks.py
04-projects/rss-ai/data/: feeds copy.yaml  feeds.yaml  test_feeds.yaml
04-projects/rss-ai/logs/: README.md
04-projects/rss-ai/notebooks/: openai-summary.ipynb
04-projects/rss-ai/rss_kit/: __init__.py  error_handler.py  fetcher.py  formatter.py  logger.py  scraper.py  summarizer.py  workflow.py
04-projects/rss-ai/tests/: __init__.py
99-archive/jba/: README.md  pyproject.toml  requirements.txt
99-archive/jba/crews/james/: report.md  (+2 more)
99-archive/jba/docs/: README.md
99-archive/jba/notebooks/: README.md  exa_researcher.ipynb  simulation-models.ipynb
99-archive/jba/output/: elcatex.md  skytex.md  winnitex.md
99-archive/jba/src/: manufacturing_simulation.py  test_manufacturing_simulation.py
99-archive/prc/dea-2024-0059/: .gitignore  lib.py  main.py  pyproject.toml
ai/projects/arxiv_kit/: README.md  download.txt  pyproject.toml
ai/projects/groq_kit/: pyproject.toml
(+3795 files in other folders)
