[tool.poetry]
name = "aiforge"
version = "0.1.0"
description = "A project for AI development"
authors = ["Matthew Pazaryna <mpazaryna@gmail.com>"]
readme = "README.md"
packages = [
    {include = "aiforge", from = "src"},
    {include = "risk_kit", from = "src"},
    {include = "example_kit", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

# AI and Machine Learning
google-generativeai = "0.5.4"
langchain = "0.2.12"
langchain-openai = "0.1.21"
langchain_community = "0.2.11"
langchain-google-genai = "1.0.4"
langchain-chroma = "^0.1.2"
anthropic = "^0.34.1"
scikit-learn = "^1.5.2"

# Data Processing
pypdf = "4.3.1"
pyyaml = "^6.0.2"
chromadb = "^0.5.5"
tiktoken = "^0.7.0"

# UI and Visualization
streamlit = "^1.37.1"
pillow = "^10.4.0"

# Utilities
termcolor = "^2.4.0"
psutil = "^6.0.0"
httpx = "^0.27.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.3.0"
pytest-asyncio = "^0.23.8"
hypothesis = "^6.108.3"

# Linting and Formatting
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
mypy = "^1.3.0"
black = {extras = ["jupyter"], version = "^24.3.0"}
pre-commit = "^3.8.0"

# Type checking
types-pyyaml = "^6.0.12.20240808"

# Task running
invoke = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pre-commit-all = "scripts.run_pre_commit:run_pre_commit"
changelog = "scripts.run_changelog:run_changelog_generator"
run-command = "scripts.command_runner:main"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
mypy_path = "src"
python_version = "3.10"  # Updated to match the minimum supported version
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
exclude = ['^tests/']
