[tool.poetry]
name = "prism"
version = "0.1.0"
description = ""
authors = ["Matthew Pazaryna <52605785+mpazaryna@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "research_kit"}]

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.2.44"
python-dotenv = "^1.0.1"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
mypy = "^1.3.0"
black = {extras = ["jupyter"], version = "^24.3.0"}
pre-commit = "^3.8.0"
invoke = "^2.2.0"
pytest = "^7.3.1" 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
