[tool.poetry]
name = "jba"
version = "0.1.0"
description = "jba using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }


[tool.poetry.scripts]
jba = "jba.main:run"
run_crew = "jba.main:run"
train = "jba.main:train"
replay = "jba.main:replay"
test = "jba.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
