[tool.poetry]
name = "risk_calculator"
version = "0.1.0"
description = "A command-line risk calculation tool based on risk_kit"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
risk-kit = {git = "https://github.com/mpazaryna/risk_kit.git"}
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"

[tool.poetry.scripts]
risk-calc = "risk_calculator.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"