[tool.poetry]
name = "trading_kit"
version = "0.1.0"
description = "All things risk"
authors = ["Matthew Pazaryna <52605785+mpazaryna@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.3.3"
numpy = "^2.1.1"
numpy-financial = "^1.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
pandas-stubs = "^2.2.2.240909"
isort = "^5.13.2"
pdoc = "^14.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
# Linting and Formatting
flake8 = "^6.0.0"
flake8-docstrings = "^1.7.0"
mypy = "^1.3.0"
black = {extras = ["jupyter"], version = "^24.3.0"}
pre-commit = "^3.8.0"

# Task running
invoke = "^2.2.0"
