[tool.poetry]
name = "trading_kit_fastapi"
version = "0.1.0"
description = "FastAPI wrapper for trading_kit analysis functions"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pandas = "^2.1.1"
trading-kit = {git = "https://github.com/mpazaryna/trading_kit.git", tag = "v0.2.0"}
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
invoke = "^2.2.0"
psutil = "^6.0.0"

[tool.poetry.scripts]
start = "sh -c 'PYTHONPATH=src uvicorn src.trading_kit_fastapi.main:app --reload'"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"