[tool.poetry]
name = "recipe-assistant"
version = "0.1.0"
description = "AI-Powered Recipe Metadata Extractor and Smart Filter"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "recipe_assistant", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
feedparser = "^6.0.10"
nltk = "^3.8.1"
scikit-learn = "^1.3.0"
pydantic = "^2.3.0"
toolz = "^0.12.1"
openai = "^1.44.0"
groq = "^0.11.0"
langchain = "^0.2.16"
langchain-community = "^0.2.16"
langchain-openai = "^0.1.23"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/recipe_assistant"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = "E203"