[tool.poetry]
name = "dea-2024-0059"
version = "0.1.0"
description = ""
authors = ["mpazaryna <mpazbot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
nltk = "^3.8.1"
textblob = "^0.18.0.post0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
