[tool.poetry]
name = "arxiv-search"
version = "0.1.0"
description = "A simple arXiv search application"
authors = ["Matthew Pazaryna <mpazaryna@gmail.com>"]
packages = [
    { include = "arxiv_search" }  # Adjust the name to match your package structure
]


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
arxiv = "^2.1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

