[tool.poetry]
name = "stock_analysis"
version = "0.1.0"
description = "stock_analysis using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
crewai = {extras = ["tools"], version = "^0.30.11"}
unstructured = '==0.10.25'
pyowm = '3.3.0'
tools = "^0.1.9"
wikipedia = "1.4.0"
yfinance = "0.2.35"
sec-api = "1.0.17"
tiktoken = "0.5.2"
faiss-cpu = "1.7.4"
python-dotenv = "1.0.0"
agentops = "^0.1.10"

[tool.poetry.scripts]
stock_analysis = "stock_analysis.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"