[tool.poetry]
name = "poetry-030"
version = "0.1.0"
description = "Deep Learning AI Function Calling"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tiktoken = "0.6.0"
openai = "1.13.3"
python-dotenv = "1.0.0"
pydantic = "*"
langchain = {extras = ["docarray"], version = "^0.1.13"}
langchain-community = "0.0.29"
langchain-openai = "0.1.1"
load-dotenv = "*"
ipykernel = "^6.29.3"
bs4 = "^0.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
